# pong

./: Cargo.toml  Cross.toml  README.md  Trunk.toml  index.html  pong-595a5040f557eae5.js  pong-cfccf77c40e15141.js  pong-e16542ccc57e444d.js
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: style.css
src/: effects_system.rs  main.rs  setup.rs  systems.rs
wasm/: index.html  style.css
