[package]
name = "pong"
version = "0.1.0"
publish = false
authors = ["Adam Killam <amkillam@mun.ca>"]
edition = "2021"
exclude = ["dist", "build"]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
rand = "0.8.5"
bevy = "0.13.2"
mimalloc = "0.1.41"
