[package]
name = "pong"
version = "0.1.0"
publish = false
authors = ["Adam Killam <amkillam@mun.ca>"]
edition = "2021"
exclude = ["dist", "build"]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
[profile.release]
strip = "symbols"
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
relocation-model = "static"
code-model = "tiny"
overflow-checks = false
force-unwind-tables = "off"

# Profile for distribution
[profile.dist]
strip = "symbols"
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
code-model = "tiny"
overflow-checks = false
force-unwind-tables = "off"

[dependencies]
rand = "0.8.5"
bevy = "0.13.2"
blake3 = { version = "1.5.1", features = ["pure"] }
mimalloc = { version = "0.1.41", optional = true }

[build-dependencies]
rustflags = "0.1.6"
