[package]
name = "pong"
version = "0.1.0"
publish = false
authors = ["Adam Killam <amkillam@mun.ca>"]
edition = "2021"
exclude = ["dist", "build"]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
[profile.release]
strip = "symbols"
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
relocation-model = "static"
code-model = "tiny"
overflow-checks = false
force-unwind-tables = "off"

# Profile for distribution
[profile.dist]
strip = "symbols"
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
code-model = "tiny"
overflow-checks = false
force-unwind-tables = "off"

[dependencies]
rand = "0.8.5"
blake3 = { version = "1.5.1", features = ["pure"] }
winit = { version = "0.29", default-features = false }
image = { version = "0.24", default-features = false }

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "png",
  "webgl2",
  "x11",
]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.5"
bevy = { version = "0.13.2", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "png",
  "webgl2",
  "x11",
] }
blake3 = { version = "1.5.1", features = ["pure"] }
winit = { version = "0.29", default-features = false }
image = { version = "0.24", default-features = false }
mimalloc = { version = "0.1.41" }
